k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: imagetag-analyzer
    tier: database
spec:
  selector:
    matchLabels:
      app: imagetag-analyzer
      tier: database
  template:
    metadata:
      labels:
        app: imagetag-analyzer
        tier: database
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: imagetag-analyzer
    tier: database
  ports:
  - port: 5432
    targetPort: 5432
